--- a/lib/atividade09_03_web/components/layouts/app.html.heex
+++ b/lib/atividade09_03_web/components/layouts/app.html.heex
@@ -10,17 +10,17 @@
           </p>
         </div>
         <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-          <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-            @elixirphoenix
+          <a href="https://instagram.com/gaa_f" class="hover:text-zinc-700">
+            @gaa_f
           </a>
-          <a href="https://github.com/GaabrielFerreira/devweb_atividade09_03" class="hover:text-zinc-700">
+          <a href="https://github.com/GaabrielFerreira/crud_ash_liveview" class="hover:text-zinc-700">
             GitHub
           </a>
           <a
             href="https://hexdocs.pm/phoenix/overview.html"
             class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
           >
-            Get Started <span aria-hidden="true">&rarr;</span>
+            Get Started Phoenix <span aria-hidden="true">&rarr;</span>
           </a>
         </div>
       </div>
