--- a/lib/atividade09_03_web/live/aluno_live.html.heex
+++ b/lib/atividade09_03_web/live/aluno_live.html.heex
@@ -1,7 +1,7 @@
 <div class="min-h-full bg-gradient-to-br from-blue-50 via-white to-purple-50">
   <div class="container mx-auto p-4 sm:p-6 lg:p-8">
     <!-- Header Section -->
-    <div class="text-center mb-6 lg:mb-10">
+    <div class="text-center mb-6 mt-10 lg:mb-10">
       <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-900 mb-2">
         <span class="bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
           Sistema de Gestão de Alunos
